force-app/main/default/objects/Candidate__c/fields/Available__c.field-meta.xml
<CustomField>
    <fullName>Available__c</fullName>
    <label>Available</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediately</fullName>
            </value>
            <value>
                <fullName>2 Weeks</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>