force-app/main/default/objects/Candidate__c/fields/Available_Date__c.field-meta.xml
<CustomField>
    <fullName>Available_Date__c</fullName>
    <label>Available Date</label>
    <type>Date</type>
</CustomField>