force-app/main/default/objects/Candidate__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <inlineHelpText>Hourly Cost (W2, 1099 Direct, or C2C)</inlineHelpText>
    <label>Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>