force-app/main/default/objects/Candidate__c/fields/Do_Not_Hire__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Hire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Hire</label>
    <type>Checkbox</type>
</CustomField>