force-app/main/default/objects/Candidate__c/fields/End_Client__c.field-meta.xml
<CustomField>
    <fullName>End_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>End Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>End Client</relationshipLabel>
    <relationshipName>Candidates1</relationshipName>
    <type>Lookup</type>
</CustomField>