force-app/main/default/objects/Candidate__c/fields/Hired__c.field-meta.xml
<CustomField>
    <fullName>Hired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hired</label>
    <type>Checkbox</type>
</CustomField>