force-app/main/default/objects/Candidate__c/fields/Hiring_Status__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Status__c</fullName>
    <label>Hiring Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application Received</fullName>
                <default>true</default>
                <label>Application Received</label>
            </value>
            <value>
                <fullName>Candidate Screen</fullName>
            </value>
            <value>
                <fullName>Phone Interview</fullName>
            </value>
            <value>
                <fullName>Technical Screen</fullName>
            </value>
            <value>
                <fullName>Video Interview</fullName>
            </value>
            <value>
                <fullName>Customer Interview</fullName>
            </value>
            <value>
                <fullName>Hired</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>