force-app/main/default/objects/Candidate__c/fields/Minimum_Rate__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Rate__c</fullName>
    <label>Minimum Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>