force-app/main/default/objects/Candidate__c/fields/Relocation_Expectations__c.field-meta.xml
<CustomField>
    <fullName>Relocation_Expectations__c</fullName>
    <label>Relocation Expectations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Will Relocate (At CQ Cost)</fullName>
            </value>
            <value>
                <fullName>Will Relocate (At Own Cost)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>