force-app/main/default/objects/Candidate__c/fields/Suggested_Rate_Formula__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Rate_Formula__c</fullName>
    <formula>Cost__c * 1.75</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Suggested Rate Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>