force-app/main/default/objects/Candidate__c/fields/Work_Expecations__c.field-meta.xml
<CustomField>
    <fullName>Work_Expecations__c</fullName>
    <label>Work Expecations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onsite</fullName>
            </value>
            <value>
                <fullName>Remote</fullName>
            </value>
            <value>
                <fullName>Will Travel</fullName>
            </value>
            <value>
                <fullName>Will Relocate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>