force-app/main/default/objects/Candidate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Phone__c</columns>
    <columns>Email__c</columns>
    <columns>Cost__c</columns>
    <columns>Partner__c</columns>
    <columns>Available_Date__c</columns>
    <columns>Keywords__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Hired__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All</label>
</ListView>